# rs-git-status2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  example.sh  git-status2arrow-ipc-stream
src/: lib.rs
