[package]
name = "rs-git-status2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

description = "Git status to Arrow IPC stream"
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-git-status2arrow-ipc-stream"
homepage = "https://github.com/takanoriyanagitani/rs-git-status2arrow-ipc-stream"
documentation = "https://docs.rs/rs-git-status2arrow-ipc-stream/latest"
keywords = ["git", "status", "arrow", "ipc", "stream"]

exclude = [
	"git-status2arrow-ipc-stream",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[bin]]
name = "git-status2arrow-ipc-stream"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.gix]
version = "0"
default-features = false
features = [
	"status",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
